# Staysure-opensource-grippers

./: .gitignore  AGENTS.md  README.md  pyproject.toml
grippers/: __init__.py  __main__.py
grippers/capture/: __init__.py  camera.py  stream.py
grippers/configs/: default.yaml
grippers/data/: __init__.py  schema.py  session.py
grippers/perception/: __init__.py  depth.py  detector.py  pipeline.py  pose.py
grippers/scripts/: record.py  visualize.py
tests/: test_perception.py  test_session.py
