[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "grippers"
version = "0.1.0"
description = "Vision-based dexterous manipulation learning — head-mounted camera to humanoid robot"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10",
    "opencv-python>=4.9",
    "torch>=2.2",
    "torchvision",
    "transformers>=4.40",
    "h5py>=3.10",
    "numpy>=1.26",
    "pyyaml",
    "click",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]

[project.scripts]
grippers-record = "grippers.scripts.record:main"
grippers-visualize = "grippers.scripts.visualize:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["grippers*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
